动态注解action支持原生构造函数